--- a/index.html
+++ b/index.html
@@ -15,21 +15,13 @@
       </header>
 
       <div class="tab-group">
-        <div class="tab-item" data-currency="EUR">
+        <div class="tab-item" data-currency="BTC">
           <span class="icon"></span>
-          🇪🇺
+          BTC
         </div>
-        <div class="tab-item active" data-currency="USD">
+        <div class="tab-item active" data-currency="ETH">
           <span class="icon"></span>
-          🇺🇸
-        </div>
-        <div class="tab-item" data-currency="GBP">
-          <span class="icon"></span>
-          🇬🇧
-        </div>
-        <div class="tab-item" data-currency="AUD">
-          <span class="icon"></span>
-          🇦🇺
+          ETH
         </div>
       </div>
 
@@ -51,10 +43,7 @@
             </div>
 
             <div class="column">
-              <div class="rates"><span>USD</span><div class="BTC-js-usd value">&nbsp;</div></div>
-              <div class="rates"><span>GBP</span><div class="BTC-js-gbp value">&nbsp;</div></div>
-              <div class="rates"><span>EUR</span><div class="BTC-js-eur value">&nbsp;</div></div>
-              <div class="rates"><span>AUD</span><div class="BTC-js-aud value">&nbsp;</div></div>
+              <div class="rates"><span>ETH</span><div class="BTC-js-eth value">&nbsp;</div></div>
             </div>
 
           </div>
@@ -67,10 +56,7 @@
             </div>
 
             <div class="column">
-              <div class="rates"><span>USD</span><div class="ETH-js-usd value">&nbsp;</div></div>
-              <div class="rates"><span>GBP</span><div class="ETH-js-gbp value">&nbsp;</div></div>
-              <div class="rates"><span>EUR</span><div class="ETH-js-eur value">&nbsp;</div></div>
-              <div class="rates"><span>AUD</span><div class="ETH-js-aud value">&nbsp;</div></div>
+              <div class="rates"><span>BTC</span><div class="ETH-js-btc value">&nbsp;</div></div>
             </div>
 
           </div>
@@ -83,45 +69,12 @@
             </div>
 
             <div class="column">
-              <div class="rates"><span>USD</span><div class="LTC-js-usd value">&nbsp;</div></div>
-              <div class="rates"><span>GBP</span><div class="LTC-js-gbp value">&nbsp;</div></div>
-              <div class="rates"><span>EUR</span><div class="LTC-js-eur value">&nbsp;</div></div>
-              <div class="rates"><span>AUD</span><div class="LTC-js-aud value">&nbsp;</div></div>
+              <div class="rates"><span>BTC</span><div class="LTC-js-btc value">&nbsp;</div></div>
+              <div class="rates"><span>ETH</span><div class="LTC-js-eth value">&nbsp;</div></div>
             </div>
 
           </div>
 
-          <div class="coin" data-coin="DASH">
-
-            <div class="column">
-              <div class="reading"><div class="circle DASH"></div> DASH</div>
-              <div class="description light">Dash</div>
-            </div>
-
-            <div class="column">
-              <div class="rates"><span>USD</span><div class="DASH-js-usd value">&nbsp;</div></div>
-              <div class="rates"><span>GBP</span><div class="DASH-js-gbp value">&nbsp;</div></div>
-              <div class="rates"><span>EUR</span><div class="DASH-js-eur value">&nbsp;</div></div>
-              <div class="rates"><span>AUD</span><div class="DASH-js-aud value">&nbsp;</div></div>
-            </div>
-
-          </div>
-
-          <div class="coin" data-coin="ZEC">
-
-            <div class="column">
-              <div class="reading"><div class="circle ZEC"></div> ZEC</div>
-              <div class="description light">Zcash</div>
-            </div>
-
-            <div class="column">
-              <div class="rates"><span>USD</span><div class="ZEC-js-usd value">&nbsp;</div></div>
-              <div class="rates"><span>GBP</span><div class="ZEC-js-gbp value">&nbsp;</div></div>
-              <div class="rates"><span>EUR</span><div class="ZEC-js-eur value">&nbsp;</div></div>
-              <div class="rates"><span>AUD</span><div class="ZEC-js-aud value">&nbsp;</div></div>
-            </div>
-
-          </div>
 
           <div class="coin" data-coin="XRP">
 
@@ -131,10 +84,9 @@
             </div>
 
             <div class="column">
-              <div class="rates"><span>USD</span><div class="XRP-js-usd value">&nbsp;</div></div>
-              <div class="rates"><span>GBP</span><div class="XRP-js-gbp value">&nbsp;</div></div>
-              <div class="rates"><span>EUR</span><div class="XRP-js-eur value">&nbsp;</div></div>
-              <div class="rates"><span>AUD</span><div class="XRP-js-aud value">&nbsp;</div></div>
+              <div class="rates"><span>BTC</span><div class="XRP-js-btc value">&nbsp;</div></div>
+              <div class="rates"><span>ETH</span><div class="XRP-js-eth value">&nbsp;</div></div>
+             
             </div>
 
           </div>
